--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 $title-dark-color: #272d4e;
+$violet-color: #7854f7;
 
 *,
 *::before,
@@ -28,10 +29,26 @@ body {
       rgba(229, 239, 255, 0.262661) 83.7%,
       rgba(229, 239, 255, 0) 100%
     );
+  &-content {
+    display: flex;
+  }
+  &-text {
+    width: 55%;
+    margin-left: 220px;
+  }
   &-title {
     font-weight: 700;
     font-size: 4.5em;
     color: $title-dark-color;
+  }
+  &-button {
+    border: none;
+    width: 267px;
+    height: 72px;
+    background-color: $violet-color;
+    color: #fff;
+    border-radius: 60px;
+    font-size: 1em;
   }
 }
 
@@ -41,6 +58,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 30px 55px;
+    width: 100%;
   }
   &-right {
     flex: 1;
