--- a/styles.scss
+++ b/styles.scss
@@ -35,11 +35,25 @@ body {
   &-text {
     width: 55%;
     margin-left: 220px;
+    p {
+      margin-bottom: 30px;
+      width: 720px;
+      color: #94A2B3;
+      line-height: 25px;
+    }
   }
   &-title {
     font-weight: 700;
     font-size: 4.5em;
+    line-height: 95px;
     color: $title-dark-color;
+    margin-bottom: 30px;
+  }
+  &-action {
+    a {
+      color: #299EF3;
+      text-decoration: none;
+    }
   }
   &-button {
     border: none;
@@ -57,7 +71,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 55px;
+    padding: 30px 55px 0;
+    margin-bottom: 95px;
     width: 100%;
   }
   &-right {
