--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,15 @@ body {
   padding: 0;
 }
 
+section {
+  height: 100vh;
+}
+
+.section-title {
+  font-size: 55px;
+  font-weight: 700;
+}
+
 .hero {
   background: url(../images/hero-bg.png) no-repeat, -webkit-gradient(linear, left top, left bottom, from(#e5efff), color-stop(83.7%, rgba(229, 239, 255, 0.262661)), to(rgba(229, 239, 255, 0)));
   background: url(../images/hero-bg.png) no-repeat, linear-gradient(180deg, #e5efff 0%, rgba(229, 239, 255, 0.262661) 83.7%, rgba(229, 239, 255, 0) 100%);
