--- a/styles.scss
+++ b/styles.scss
@@ -17,9 +17,18 @@ body {
 }
 
 // .container {
-//   width: 1920px;
+//   width: 1480px;
 //   margin: 0 auto;
 // }
+
+section {
+  height: 100vh;
+}
+
+.section-title {
+  font-size: 55px;
+  font-weight: 700;
+}
 
 .hero {
   background: url(../images/hero-bg.png) no-repeat,
