features card images positioning

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,11 @@ p {
   line-height: 25px;
 }
 
+.hero,
+.features {
+  height: 100vh;
+}
+
 .link {
   color: #299ef3;
   text-decoration: none;
@@ -144,7 +149,14 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0 205px 0 114px;
+}
+
+.features-card {
+  position: relative;
+  width: 33.3%;
 }
 
 .features-card__text {
@@ -153,5 +165,18 @@ p {
 
 .features-img {
   margin-bottom: -50px;
+}
+
+.features-img__payment {
+  position: absolute;
+  top: 58px;
+  left: -101px;
+}
+
+.features-img__icon {
+  position: absolute;
+  top: 5px;
+  top: 43px;
+  left: -28px;
 }
 /*# sourceMappingURL=styles.css.map */
